Bug fix: Avoid dvh overflow

--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -8,7 +8,7 @@
 
 .carousel-item img {
     height: 100vh;
-    height: 100dvh;
+    height: 100svh;
     width: auto;
     object-fit: cover;
 }
